<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/stock_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/symbol"
        android:inputType="textPersonName"/>

    <CheckBox
        android:id="@+id/fetch_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stock_symbol"
        android:checked="true"
        android:text="@string/fetch_news"/>

    <CheckBox
        android:id="@+id/fetch_espi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fetch_news"
        android:checked="true"
        android:text="@string/fetch_espi"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fetch_espi"
        android:text="@string/add_symbol"/>
</RelativeLayout>